G/tests/fail/array_negative.g
// Cỡ mảng là biểu thức hằng không dương -> phải báo lỗi.
const N: int = 2

fn main() -> int {
    let a: [N - 5]int = [1]
    return 0
}
